# fast_tensor_leverage

./: .gitignore  1d_quantization_plots.py  README.md  accuracy_tests.py  accuracy_tests_alternate.py  als.py  als_test.py  bayesian_opt_tensorD.ipynb  benchmark_algorithms.py  common.py  compare_distributions.py  comparison.py  config_template.json  configure.py  dense_tensor.py  dense_tt_test.py  env_template.sh  exact_solve_sparse_comparison_1.py  experiment.py  function_tensor.py  functions.py  image_classification.py  isolated_test.py  krp_sampler_opt0.py  krp_sampler_opt1.py  krp_sampler_opt2.py  krp_sampler_opt3.py  leave_one_test.py  modules_local.sh  modules_perlmutter.sh  partition_tree.py  profile_script.sh  quantization.py  quantization_plots.py  requirements.txt  run_exact_solve_sparse_comparison.sh  run_sparse_benchmark.sh  run_tests.py  runtime_benchmark.py  scratch.py  (+18 more)
algorithms/: contractions.py  tt_als.py
baseline/: matlab_experiments.sh  tensorly_benchmark.py  test_sparse_parafac.py  ttoolbox_comparison.m
benchmarks/: accuracy_tests_distortion.py  exact_solve_sparse_comparison.py  sparse_tensor_benchmark.py
cpp_ext/: CMakeLists.txt  als.hpp  als_module.cpp  black_box_tensor.hpp  common.h  dense_tensor.hpp  efficient_krp_sampler.cpp  efficient_krp_sampler.hpp  function_tensor.hpp  hash_lookup.hpp  hashing.hpp  idx_lookup.hpp  index_filter.hpp  json.hpp  larsen_kolda_hybrid.hpp  larsen_kolda_sampler.hpp  low_rank_tensor.hpp  main.cpp  partition_tree.cpp  partition_tree.hpp  py_function_tensor.hpp  random_util.hpp  reproducible_noise.hpp  sampler.hpp  sort_lookup.hpp  sparse_tensor.hpp  tensor.hpp  test.cpp  tests.hpp  tt_module.cpp  tt_sampler.hpp  uniform_sampler.hpp
dense_tt_tests/: coil100_data_loader.py  datasets_loader.py  dense_tensor.py  draw_samples_test.py  draw_samples_tns_tt.py  feature_extraction.py  plot.py  real_data.py  relative_error.py  synthetic_data.py  tensor_train.py  tns_tt.py  tns_tt_test.py  tt_als.py  tt_als_sampled.py  tt_svd.py  tt_svd_draft.py
dense_tt_tests/cpp_ext/: black_box_tensor.hpp  common.h  function_tensor.hpp  idx_lookup.hpp  partition_tree.cpp  sampler.hpp  tt_module.cpp  tt_sampler.hpp  uniform_sampler.hpp
experimental/: benchmark_algorithms.py  comparison.py  conversion_wrapper.m  image_classification.py  quantization_plots.py  read_amrex_plot.py  tensorly_benchmark.py  tensorly_experiments.sh  volume.py
plotting/: chart_generator.py  generate_images.ipynb  generate_images.py  generate_images_expanded.ipynb  tt_chart_generator.py
reference_implementation/: README.md  det_volume_sampling.py  krp_sampler.py  krp_sampler_opt0.py  krp_sampler_opt1.py  krp_sampler_opt2.py  krp_sampler_opt3.py  lemma_sampler.py  partition_tree.py  segment_tree.py  tensor_train.py  tensor_train_reference.py  test_reference_implementation.py
submission_data/january_25/: accuracy_bench.json  amazon-reviews_exact_solve_comp_1.json  amazon-reviews_sparse_traces1.json  amazon-reviews_sparse_traces2.json  amazon-reviews_sparse_traces3.json  amazon-reviews_time_comparison1.json  amazon-reviews_time_comparison2.json  amazon-reviews_time_comparison_efficient.json  enron_sparse_traces.json  nell-2_sparse_traces1.json  nell-2_sparse_traces2.json  (+10 more)
tensor_io/: CMakeLists.txt  amrex_tensor_loader.py  coil100_data_loader.py  log_values.cpp  torch_tensor_loader.py
tensors/: dense_tensor.py  tensor_train.py  tt_cross.py
test_project/: CMakeLists.txt  test.cpp
tuning/: bayesian_optimization_v1.ipynb  bayesian_optimization_v2.ipynb
writeup/: tex_file_backup.tex
(+2140 files in other folders)
